# agentpdf

./: .gitignore  CMakeLists.txt
cmake/: CheckContinuitySmoke.cmake  CheckWordOrder.cmake
config/: heuristics.json  metadata.json
config/overrides/: acm_bernstein2002.heuristics.json  acm_crane2001.heuristics.json  candidate_paper.heuristics.json
include/agentpdf/: config.hpp  pdf.hpp  pipeline.hpp  simd.hpp  thread_pool.hpp  types.hpp  util.hpp
scripts/: compare_word_order.py
src/: main.cpp
src/cli/: args.cpp
src/config/: load.cpp
src/index/: job_index.cpp
src/interactive/: repl.cpp
src/layout/: continuity.cpp  leptonica_analyze.cpp
src/markdown/: assemble.cpp
src/meta/: extract.cpp
src/ocr/: tesseract_page.cpp
src/pdf/: document.cpp
src/pipeline/: convert.cpp
src/report/: run_stats.cpp
src/text/: footnotes.cpp  paragraphs.cpp  structure.cpp
src/util/: fs_util.cpp  json_mini.cpp  pixel_convert_x86.cpp  simd.cpp  string_util.cpp  thread_pool.cpp
